<resources>
    <string name="app_name">Zevent</string>
    <string name="caps_app_name">ZEVENT</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="enter">Войти</string>
    <string name="no_account">НЕТ АККАУНТА?</string>
    <string name="registrate">ЗАРЕГИСТРИРУЙТЕСЬ</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>