<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFAFA"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.RegistrationActivity">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen"
        android:text="@string/caps_app_name"
        android:textColor="@color/header_text_color"
        android:textSize="@dimen/login_header"
        app:layout_constraintBottom_toTopOf="@+id/loginTelephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="128dp"/>

    <EditText
        android:id="@+id/loginTelephone"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="@string/login"
        android:background="@drawable/login_edit_text_background"
        android:fontFamily="@font/oxygen"
        android:layout_marginBottom="16dp"
        android:hint="Телефон"
        android:inputType="number"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/login_hint"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/login_edit_text_background"
        android:fontFamily="@font/oxygen"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/login_hint"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterAccountButton"
        android:layout_marginTop="64dp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/login_enter_button_background"
        android:fontFamily="@font/oxygen"
        android:text="@string/enter"
        android:textColor="@color/main_white_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/oxygen"
        android:text="@string/no_account"
        android:textColor="@color/main_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterAccountButton" />


    <Button
        android:id="@+id/regButton"
        style="@style/Widget.AppCompat.ActionButton.Overflow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textColor="@color/header_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>